--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,22 +1,46 @@
 <h1>Operadores Rxjs</h1>
-<!-- <app-observables></app-observables> -->
-<!-- <app-subject></app-subject> -->
+<app-observables></app-observables>
+<app-subject></app-subject>
 
 <h3>Operadores de criação</h3>
-<!-- <app-from></app-from> -->
-<!-- <app-of></app-of> -->
-<!-- <app-from-event></app-from-event> -->
-<!-- <app-interval></app-interval> -->
-<!-- <app-timer></app-timer> -->
-<!-- <app-throw-error></app-throw-error> -->
-<!-- <app-ajax></app-ajax> -->
+<app-from></app-from>
+<app-of></app-of>
+<app-from-event></app-from-event>
+<app-interval></app-interval>
+<app-timer></app-timer>
+<app-throw-error></app-throw-error>
+<app-ajax></app-ajax>
 
 <h3>Operadores de combinação</h3>
-<!-- <app-forkjoin></app-forkjoin> -->
-<!-- <app-zip></app-zip> -->
-<!-- <app-merge-concat></app-merge-concat> -->
+<app-forkjoin></app-forkjoin>
+<app-zip></app-zip>
+<app-merge-concat></app-merge-concat>
 
 <h3>Operadores de transformação</h3>
-<!-- <app-map></app-map> -->
-<!-- <app-map-to></app-map-to> -->
+<app-map></app-map>
+<app-map-to></app-map-to>
 <app-switch-map></app-switch-map>
+<app-pluck></app-pluck>
+<app-to-array></app-to-array>
+
+<h3>Operadores de Filtragem</h3>
+<app-filter></app-filter>
+<app-take></app-take>
+<app-take-until></app-take-until>
+<app-take-while></app-take-while>
+<app-skip></app-skip>
+<app-debounce-time></app-debounce-time>
+
+<h3>Operadores de Junção</h3>
+<app-switch-all></app-switch-all>
+<app-start-with></app-start-with>
+<app-combine-latest></app-combine-latest>
+<app-with-latest-from></app-with-latest-from>
+
+<h3>Operadores de Multicasting</h3>
+<app-share-replay></app-share-replay>
+<app-share></app-share>
+
+<h3>Operadores de Tratamento de Erros</h3>
+<app-catch-error></app-catch-error>
+<app-retry-when></app-retry-when>
